tests/errors/type-error-argument.ja
procedure foo(int x)
    skip

procedure main()
    stack x
    call foo(x)
